# kidskoding

./: .gitignore  Cargo.toml  README.md  SKILLS.md
.github/workflows/: gh-actions.yml  repo-updater.yml  update-activity.yml
gh-activity-updater/: Cargo.toml
gh-activity-updater/src/: lib.rs  main.rs  repo.rs  simple_event.rs
src/: main.rs
