[package]
name = "gh-profile-md"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
